_sass/_home.scss
ul.projects {
  margin-left: 0;
  list-style-type: none;

  .panel {
    box-shadow: 1px 1px 0px #888;
  }

  .tags {
    color: #777;
    font-size: 0.8em;
  }

  .tags strong {
    color: #333;
  }

  .tag {
    margin-left: 2px;
  }

  .tag:not(:last-child)::after {
    content: ',';
  }

  a.check-it-out {
    float: right;
    color: $brand-color;

    &:hover {
      color: $brand-color-dark;
    }

    &:visited {
      color: darken($brand-color, 15%);
    }

    .btn {
      color: inherit;
    }
  }
}

